ms-hw-5/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ms-hw-5
  labels:
    istio-injection: enabled
